Added a list of links to Github projects
Up to Shopping List app

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>My Shopping List</title>
+	<title>Edoe Cohen - Github</title>
 
 </head>
 
 	<body>
-		<p>hello world!</p>
+		<p>hello world! <br>
+		This is my Github collection. Enjoy.!</p>
+
+		<ol>
+			<li><a href="http://edoecohen.github.io/html_resume/resume.html" target="_blank">HTML Resume</a></li>
+			<li><a href="http://edoecohen.github.io/omanoot/" target="_blank">Small business site - Omanoot</a></li>
+			<li><a href="http://edoecohen.github.io/jquery-streetfighter/main.html" target="_blank">jQuery Street Fighter</a></li>
+			<li><a href="http://edoecohen.github.io/shopping-list/" target="_blank">Shopping List</a></li>
+		</ol>
 	</body>
 
 </html>
