--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<li><a href="http://edoecohen.github.io/omanoot/" target="_blank">Small business site - Omanoot</a></li>
 			<li><a href="http://edoecohen.github.io/jquery-streetfighter/main.html" target="_blank">jQuery Street Fighter</a></li>
 			<li><a href="http://edoecohen.github.io/shopping-list/" target="_blank">Shopping List</a></li>
+			<li><a href="http://edoecohen.github.io/fizzbuzz/" target="_blank"></a></li>
 		</ol>
 	</body>
 
