New Portofolio Site

--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Edoe Cohen - Github</title>
+	<title>Edoe Cohen</title>
 
 </head>
 
 	<body>
-		<p>hello world! <br>
-		This is my Github collection. Enjoy.!</p>
+		<h3>hello world! </h3>
+		I am learning to code via the Thinkful front end course.<br>
+		A big part of the curriculum is devoted to building projects.<br>
+		This is my Github collection with all the apps and stuff I've built as part of the course. Enjoy!</p>
 
-		<ol>
+		<ul>
 			<li><a href="http://edoecohen.github.io/html_resume/resume.html" target="_blank">HTML Resume</a></li>
 			<li><a href="http://edoecohen.github.io/omanoot/" target="_blank">Small business site - Omanoot</a></li>
 			<li><a href="http://edoecohen.github.io/jquery-streetfighter/main.html" target="_blank">jQuery Street Fighter</a></li>
 			<li><a href="http://edoecohen.github.io/shopping-list/" target="_blank">Shopping List</a></li>
 			<li><a href="http://edoecohen.github.io/fizzbuzz/" target="_blank">FizzBuzz</a></li>
-		</ol>
+			<li><a href="http://edoecohen.github.io/hot-or-cold/" target="_blank">Hot or Cold</a></li>
+			<li><a href="http://edoecohen.github.io/zionism-101/" target="_blank">Zionism 101 Quiz</a></li>
+		</ul>
 	</body>
+	<h3>Elsewhere Online</h3>
+		<ul>
+			<li><a href="http://now.edoecohen.com/">Waking Up Into Now</a></li>
+		</ul>
+	</p>
+	<h3>Articles</h3>
+		<ul>
+			<li><a href="http://www.roicommunity.org/blog/vision-over-visibility" target="_blank">Vision over Visibility</a></li>
+			<li><a href="http://ejewishphilanthropy.com/la-jerusalem-mashup/" target="_blank">LA Jerusalem Mashup</a></li>
+			<li><a href="http://www.roicommunity.org/blog/village-people" target="_blank">The Village People</a></li>
+			<li><a href="http://www.jpost.com/Opinion/Op-Ed-Contributors/The-case-against-a-mandatory-draft" target="_blank">The Case Against a Mandatory Draft</a></li>
+			<li><a href="http://www.jewishjournal.com/israel/article/where_is_home_us_or_israel_20060505/" target="_blank">Where is Home?</a></li>
+		</ul>
+	</p>
 
 </html>
