--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="icon" href="images/favicon.jpg" />
-	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/imagesloaded.pkgd.min.js"></script>
-	<script src='js/jquery.zoom.min.js'></script>
+	<link rel="stylesheet" href="resources/jquery-ui.min.css" />
+
 </head>
 
 <body>
@@ -76,5 +71,12 @@
 	</div>
 
 </div>
+
+<script src="resources/jquery-2.1.4.min.js"></script>
+<script src="resources/jquery-ui.min.js"></script>
+<script src="js/app.js"></script>
+<script src="resources/isotope.pkgd.min.js"></script>
+<script src="resources/imagesloaded.pkgd.min.js"></script>
+<script src='resources/jquery.zoom.min.js'></script>
 
 </body>
